Update Buổi 4 - Thư viện lập trình Turtle.ipynb

--- a/Buổi 4 - Thư viện lập trình Turtle.ipynb
+++ b/Buổi 4 - Thư viện lập trình Turtle.ipynb
@@ -38,11 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "099b74c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()"
+   ]
   },
   {
    "attachments": {
@@ -79,11 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a29f69fb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.fd(100)\n",
+    "t.rt(90)\n",
+    "t.fd(100)\n",
+    "t.rt(90)\n",
+    "t.fd(100)\n",
+    "t.rt(90)\n",
+    "t.fd(100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f198c5c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "for i in range(4):\n",
+    "    t.fd(100)\n",
+    "    t.rt(90)"
+   ]
   },
   {
    "attachments": {
@@ -124,11 +148,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "14c10c14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "for i in range(4):\n",
+    "    t.fd(100)\n",
+    "    t.rt(90)\n",
+    "    \n",
+    "t.penup()\n",
+    "\n",
+    "t.fd(200)\n",
+    "\n",
+    "t.pendown()\n",
+    "\n",
+    "for i in range(4):\n",
+    "    t.fd(100)\n",
+    "    t.rt(90)\n",
+    "    \n",
+    "t.penup()\n",
+    "    \n",
+    "t.bk(100)"
+   ]
   },
   {
    "attachments": {
@@ -161,11 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5bea5c63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.color('red','blue')\n",
+    "\n",
+    "t.begin_fill()\n",
+    "\n",
+    "for i in range(3):\n",
+    "    t.fd(100)\n",
+    "    t.lt(120)\n",
+    "\n",
+    "t.end_fill()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,11 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "512178a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "for i in range(6):\n",
+    "    t.fd(100)\n",
+    "    t.lt(60)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,11 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d3a74899",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "for i in range(2):\n",
+    "    t.fd(100)\n",
+    "    t.lt(60)\n",
+    "    t.fd(60)\n",
+    "    t.lt(120)\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "attachments": {
@@ -218,11 +298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "823102cd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.color('green','yellow')\n",
+    "\n",
+    "t.begin_fill()\n",
+    "\n",
+    "t.lt(36)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    t.fd(200)\n",
+    "    t.lt(144)\n",
+    "\n",
+    "t.end_fill()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,11 +332,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0dd4999a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "t.speed(1)\n",
+    "\n",
+    "# Vẽ hình tròn với bán kính là 100\n",
+    "# Chu vi hình tròn là 100*2*3.14\n",
+    "for i in range (360):\n",
+    "    t.fd(2*3.14*100/360) # Lấy chu vi hình tròn chia cho 360 là ra giá trị của fd\n",
+    "    t.lt(1)\n",
+    "\n",
+    "# Đo thử xem chính xác 100 hay chưa\n",
+    "t.pu()\n",
+    "t.bk(100)\n",
+    "t.pd()\n",
+    "for i in range (4):\n",
+    "    t.fd(200)\n",
+    "    t.lt(90)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,11 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b196024",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "t.speed(1)\n",
+    "t.circle(100)"
+   ]
   },
   {
    "attachments": {
@@ -275,8 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "84b81183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "t.speed(0)\n",
+    "t.color('green', 'yellow')\n",
+    "t.begin_fill()\n",
+    "for i in range(36):\n",
+    "    t.fd(50)\n",
+    "    t.rt(140)\n",
+    "    t.fd(50)\n",
+    "    t.lt(150)\n",
+    "t.end_fill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20598f0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
