--- a/Buoi 5 - Biến và kiểu dữ liệu.ipynb
+++ b/Buoi 5 - Biến và kiểu dữ liệu.ipynb
@@ -69,11 +69,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c5d3a9f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5 + 10\n",
+    "b = 7\n",
+    "c = a + b\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f47de08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "print(a)\n",
+    "a = 10\n",
+    "b = a + 2\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,11 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "48f83a7d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello mọi người\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Hello\"\n",
+    "b = 'mọi người'\n",
+    "c = a + ' ' + b \n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +193,47 @@
    "id": "b02e4e8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 2 # a là kiểu số nguyên\n",
+    "b = str(a) # b là kiểu chuỗi, a vẫn là số nguyên\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "073bed38",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '3.2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m3.2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(b)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '3.2'"
+     ]
+    }
+   ],
+   "source": [
+    "a = '3.2' # 3.2 là số thực nên chuyển sang số nguyên KHÔNG ĐƯỢC\n",
+    "b = int(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2d3361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '3.2'\n",
+    "b = float(a) # b là kiểu số thực\n",
+    "c = int(b) # Khi b là số thực ta chuyển sang số nguyên sẽ lấy phần nguyên của số thực đó (nó sẽ làm tròn xuống)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,11 +245,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c64629dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2 # a là kiểu số nguyên\n",
+    "a = str(a) # a sẽ là kiểu chuỗi \n",
+    "# c = 3 + a - Sinh ra lỗi do a là kiểu chuỗi còn 3 là kiểu số nguyên\n",
+    "c = \"3\" + a\n",
+    "print(c)"
+   ]
   },
   {
    "attachments": {
@@ -194,11 +299,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fb621dde",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 9**0.5 # Lấy căn thì mũ 0.5\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69553628",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12 % 4\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "be4650a1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 17 % 5\n",
+    "b = 17 // 5\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0a780dfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 18 % 6 # Phép tính chia hết phần dư = 0\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "536610b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3.0 # a là kiểu số thực nhưng giá trị của a là số nguyên\n",
+    "b = a % 1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "35bc0f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7.5\n",
+    "b = a % 1\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,11 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a5a493ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6.9\n",
+    "b = 9.6\n",
+    "c = a % b\n",
+    "print(c)"
+   ]
   },
   {
    "attachments": {
@@ -237,11 +470,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e2e41d19",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7 == 5 # a là kiểu boolean, a là false\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2459c5ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7 > 5\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c5542521",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7 >= 5\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ad6cde55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7 >= 7\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "eb38b7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3 != 7\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edb7c9f9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 7 - 4 # a = 3\n",
+    "b = 3 - 2 # b = 1\n",
+    "print()"
+   ]
   },
   {
    "attachments": {
@@ -266,11 +600,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "3b0db302",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a ở dòng thứ 2: 3\n",
+      "a ở dòng thứ 4: 10\n",
+      "a ở dòng thứ 6: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "print('a ở dòng thứ 2:', a)\n",
+    "a = a + 7\n",
+    "print('a ở dòng thứ 4:', a)\n",
+    "a = a + 9\n",
+    "print('a ở dòng thứ 6:', a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a12d3d5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 7\n",
+    "for i in range(3):\n",
+    "    a += a\n",
+    "## Lệnh for sẽ tương ứng với:\n",
+    "## a += a ~~> a = 7 + 7 = 14\n",
+    "## a += a ~~> a = 14 + 14 = 28\n",
+    "## a += a ~~> a = 28 + 28 = 56"
+   ]
   },
   {
    "attachments": {
@@ -295,11 +662,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8a4e9b19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "b = True\n",
+    "c = a and b \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2c5c1427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "b = 3 + 5 ==  7 + 2\n",
+    "c = a and b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "54bb1881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "b = 7 > 2 # true\n",
+    "c = 3 < 1 # false\n",
+    "d = not c and not (a or b) # (a or b) true and (not true) ~~> true and false = false\n",
+    "print(d)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,11 +736,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "22d6c679",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98.60000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = 37\n",
+    "F = C * 1.8 + 32\n",
+    "print(F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,11 +766,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d867d9c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "1082.5317547305483\n"
+     ]
+    }
+   ],
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "a = 50\n",
+    "for i in range(3):\n",
+    "    t.fd(a)\n",
+    "    t.lt(120)\n",
+    "P = a * 3\n",
+    "S = (a**2)*(3**0.5)/4\n",
+    "print(P)\n",
+    "print(S)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -349,11 +804,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8625b88b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "314.1592653589793\n",
+      "7853.981633974483\n"
+     ]
+    }
+   ],
+   "source": [
+    "import turtle\n",
+    "import math\n",
+    "t = turtle.Turtle()\n",
+    "r = 50\n",
+    "t.circle(r)\n",
+    "P = r*2*math.pi\n",
+    "S = r**2*math.pi\n",
+    "print(P)\n",
+    "print(S)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,11 +839,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46153b67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.5588235294117647\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 34\n",
+    "b = 53\n",
+    "x = (-b)/a\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -381,11 +868,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f48bed74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-22.0\n",
+      "27.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 5\n",
+    "h = 49\n",
+    "a = (t - h) / 2\n",
+    "b = (t + h) / 2\n",
+    "print(a)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,11 +906,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "44beecf0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (503403812.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    (a1 * x + b1 * y = c1) and (a2 * x + b2 * y = c2)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = 51\n",
+    "a2 = 21\n",
+    "b1 = 45\n",
+    "b2 = 94\n",
+    "c1 = 89\n",
+    "c2 = 46\n",
+    "x = c2 /  # a1 * a2 . nhân 2 vế của pt 1 cho a2. nhân 2 vế của pt 2 cho a1. ta có a1 * a2 * x + a2 * b1 * y = c1\n",
+    "# a2*a1*x + a1*b2*y = c2\n",
+    "# lấy 2 vế của pt 1 trừ cho 2 vế của pt 2. Ta có: y = c1 / a2 / b1\n",
+    "y = c1 / a2 / b1 \n",
+    "print(x)\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,11 +944,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2806f39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 200\n",
+    "import turtle\n",
+    "for i in range(4):\n",
+    "    turtle.fd(a)\n",
+    "    turtle.lt(90)"
+   ]
   }
  ],
  "metadata": {
@@ -442,7 +973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
