Update Buoi 5 - Biến và kiểu dữ liệu.ipynb

--- a/Buoi 5 - Biến và kiểu dữ liệu.ipynb
+++ b/Buoi 5 - Biến và kiểu dữ liệu.ipynb
@@ -906,30 +906,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "44beecf0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (503403812.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m\u001b[0m\n\u001b[1;33m    (a1 * x + b1 * y = c1) and (a2 * x + b2 * y = c2)\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.635749545336451\n",
+      "0.12392829306313329\n"
      ]
     }
    ],
    "source": [
+    "# Cho hệ phương trình sau: \n",
+    "# a1x + b1y = c1\n",
+    "# a2x + b2y = c2\n",
+    "# Sau khi lấy số random từ trên web, ta có:\n",
     "a1 = 51\n",
     "a2 = 21\n",
     "b1 = 45\n",
     "b2 = 94\n",
     "c1 = 89\n",
     "c2 = 46\n",
-    "x = c2 /  # a1 * a2 . nhân 2 vế của pt 1 cho a2. nhân 2 vế của pt 2 cho a1. ta có a1 * a2 * x + a2 * b1 * y = c1\n",
-    "# a2*a1*x + a1*b2*y = c2\n",
-    "# lấy 2 vế của pt 1 trừ cho 2 vế của pt 2. Ta có: y = c1 / a2 / b1\n",
-    "y = c1 / a2 / b1 \n",
+    "# Tìm nghiệm x và y của hệ phương trình đã cho trên:\n",
+    "y = (a2 * c1 - a1 * c2) / (a2 * b1 - a1 * b2)\n",
+    "x = (c1 - b1 * y) / a1\n",
     "print(x)\n",
     "print(y)"
    ]
@@ -944,16 +947,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b2806f39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 200\n",
+    "# Cho biến a, hãy vẽ a hình vuông\n",
     "import turtle\n",
-    "for i in range(4):\n",
-    "    turtle.fd(a)\n",
-    "    turtle.lt(90)"
+    "t = turtle.Turtle()\n",
+    "a = 3\n",
+    "b = 50\n",
+    "for i in range(a):\n",
+    "    for i in range(4):\n",
+    "        t.fd(b)\n",
+    "        t.lt(90)\n",
+    "    t.penup()\n",
+    "    t.fd(2 * b)\n",
+    "    t.pendown("
    ]
   }
  ],
