Update Buoi 5 - Biến và kiểu dữ liệu.ipynb

--- a/Buoi 5 - Biến và kiểu dữ liệu.ipynb
+++ b/Buoi 5 - Biến và kiểu dữ liệu.ipynb
@@ -963,7 +963,7 @@
     "        t.lt(90)\n",
     "    t.penup()\n",
     "    t.fd(2 * b)\n",
-    "    t.pendown("
+    "    t.pendown()"
    ]
   }
  ],
