--- a/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
+++ b/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
@@ -25,7 +25,25 @@
    "id": "1862a6e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "a = 5\n",
+    "\n",
+    "b = 50\n",
+    "\n",
+    "for i in range(a):\n",
+    "    for i in range(3):\n",
+    "        t.fd(b)\n",
+    "        t.left(120)\n",
+    "    t.penup()\n",
+    "    t.bk(0.1*b)\n",
+    "    t.pendown()\n",
+    "    b = b*1.2\n",
+    "    "
+   ]
   },
   {
    "attachments": {
@@ -50,7 +68,26 @@
    "id": "65a206a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "a = 5\n",
+    "b = 50\n",
+    "\n",
+    "for i in range(a):\n",
+    "    for i in range(4):\n",
+    "        t.fd(b)\n",
+    "        t.lt(90)\n",
+    "    t.penup()\n",
+    "    t.left(45)\n",
+    "    t.bk((2**0.5)*5)\n",
+    "    t.right(45)\n",
+    "    b += 10\n",
+    "    t.pendown()\n",
+    "    "
+   ]
   },
   {
    "attachments": {
@@ -77,7 +114,22 @@
    "id": "05e2bf0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "a = 100\n",
+    "r = 15\n",
+    "\n",
+    "t.color('red','black')\n",
+    "t.pensize(10) # điều chỉnh kích cỡ nét vẽ\n",
+    "t.begin_fill()\n",
+    "for i in range(4):\n",
+    "    t.fd(a - 2*r) # fd a - 2*r vì nếu fd a thì cạnh hình vuông sẽ là a + 2*r\n",
+    "    t.circle(r,90) # 90 độ ~~> vẽ 1/4 đường tròn\n",
+    "t.end_fill()"
+   ]
   },
   {
    "attachments": {
@@ -100,11 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "63838c78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.color('purple')\n",
+    "a = 40\n",
+    "t.speed(0)\n",
+    "for i in range(a):\n",
+    "    t.circle(100)\n",
+    "    t.lt(360/a)"
+   ]
   },
   {
    "attachments": {
@@ -163,11 +225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c9793a47",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Điểm trung bình: 5.666666666666667\n",
+      "Học sinh giỏi: False\n",
+      "Học sinh khá: False\n",
+      "Học sinh trung bình: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 7\n",
+    "l = 5\n",
+    "h = 5\n",
+    "dtb = (t+l+h)/3\n",
+    "print(\"Điểm trung bình:\",dtb)\n",
+    "print(\"Học sinh giỏi:\",dtb >= 8)\n",
+    "print(\"Học sinh khá:\",6 <= dtb < 8)\n",
+    "print(\"Học sinh trung bình:\",dtb < 6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +271,13 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "S = 0\n",
+    "S += 1\n",
+    "S += 2\n",
+    "S += 3\n",
+    "S += 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
