Update Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb

--- a/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
+++ b/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
@@ -189,11 +189,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "55d223b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from turtle import *\n",
+    "a = 200\n",
+    "b = 150\n",
+    "c = 250\n",
+    "speed(0)\n",
+    "# ve cot doc (y)\n",
+    "lt(90)\n",
+    "fd(300)\n",
+    "rt(45)\n",
+    "bk(10)\n",
+    "fd(10)\n",
+    "rt(90)\n",
+    "fd(10)\n",
+    "bk(10)\n",
+    "home()\n",
+    "fd(250)\n",
+    "home()\n",
+    "fd(40)\n",
+    "# tao ham ve tung cot do thi\n",
+    "def cd(x, y):\n",
+    "\tfillcolor(y)\n",
+    "\tbegin_fill()\n",
+    "\tlt(90)\n",
+    "\tfd(x)\n",
+    "\trt(90)\n",
+    "\tfd(30)\n",
+    "\trt(90)\n",
+    "\tfd(x)\n",
+    "\tlt(90)\n",
+    "\tfd(40)\n",
+    "\tend_fill()\n",
+    "# ve 3 cot do thi\n",
+    "cd(a, 'red')\n",
+    "cd(b, 'yellow')\n",
+    "cd(c, 'green')\n",
+    "done()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,18 +302,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f131483e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
+    "a = 10\n",
     "S = 0\n",
-    "S += 1\n",
-    "S += 2\n",
-    "S += 3\n",
-    "S += 4"
+    "for i in range(a):\n",
+    "    i += 1\n",
+    "    S += i\n",
+    "print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6a5d0dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12\n",
+    "S = 0\n",
+    "k = 1\n",
+    "for i in range(a):\n",
+    "    S += k\n",
+    "    k += 1\n",
+    "print(S)"
    ]
   },
   {
@@ -293,11 +363,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2f8bc72b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "479001600\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12\n",
+    "S = 1\n",
+    "k = 1\n",
+    "for i in range(a):\n",
+    "    S *= k\n",
+    "    k += 1\n",
+    "print(S)"
+   ]
   }
  ],
  "metadata": {
@@ -316,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
