Update Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb

--- a/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
@@ -14,11 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4b3df2ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "print (not a.islower())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,11 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ab00180c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "print (not a.isupper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,11 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "051eb4af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào chuỗi a: Hello, World!\n",
+      "Hãy nhập vào chuỗi b: !\n",
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào chuỗi a: \")\n",
+    "b = input(\"Hãy nhập vào chuỗi b: \")\n",
+    "print(a.find(b))\n",
+    "print(a.index(b))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,11 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "90967cd9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "b = a.find(\" \")\n",
+    "print(a[b + 1:])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,11 +133,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d126675c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập chuỗi: Xin chào các bạn, ngày hôm nay thật đẹp! Có đúng hay không vậy chèn?\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "chuoi = input(\"Nhập chuỗi: \")\n",
+    "chuoi += \" \"\n",
+    "a = chuoi.count(\"n \") + chuoi.count(\"n,\") + chuoi.count(\"n!\") + chuoi.count(\"n?\")\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,11 +165,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5be8c39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "Chuỗi a có ký tự hoa hay không:  True\n",
+      "Chuỗi a có ký tự thường hay không:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "print(\"Chuỗi a có ký tự hoa hay không: \", not a.islower())\n",
+    "print(\"Chuỗi a có ký tự thường hay không: \", not a.isupper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ec3a55e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"Give me a cup of tea\"\n",
+    "print(a.isprintable())\n",
+    "a = \"\\n\"\n",
+    "print(a.isprintable())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "749f4136",
    "metadata": {},
    "outputs": [
@@ -124,12 +227,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nhập vào một chuỗi:123454231\n",
+      "Hãy nhập vào một chuỗi: abcde\n",
+      "2\n",
+      "ab\n",
+      "cde\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "b = int(len(a)/2)\n",
+    "print(b)\n",
+    "c = a[:b]\n",
+    "d = a[b:]\n",
+    "print(c)\n",
+    "print(d)\n",
+    "\n",
+    "##### Mình làm ---> SAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f134d201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mời nhập chuỗi a:asdjnkmaskld jkalsjdklas h\n",
       "False\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = input('Mời nhập chuỗi a:')\n",
+    "b = int(len(a)/2)\n",
+    "c = a[:b]\n",
+    "d = a[-b:]\n",
+    "e = d[::-1]\n",
+    "print(c==e)\n",
+    "\n",
+    "##### Copy ---> SAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8453122a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: abccba\n",
+      "abccba\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### Thầy chỉ ---> ĐÚNG\n",
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "k = -1\n",
+    "a_nguoc = \"\"\n",
+    "for i in range(len(a)): # Dùng hàm for\n",
+    "    a_nguoc += a[k]\n",
+    "    k -= 1\n",
+    "print(a_nguoc)\n",
+    "print(a_nguoc == a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4b15d20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: 123321\n",
+      "123321\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đúng luôn\n",
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "a_nguoc = a[::-1]\n",
+    "print(a_nguoc)\n",
+    "print(a_nguoc == a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,11 +338,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0d099247",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: mMamskdjMAKSNMKaasasdASMJdak;\n",
+      "m False\n",
+      "M True\n",
+      "a False\n",
+      "m False\n",
+      "s False\n",
+      "k False\n",
+      "d False\n",
+      "j False\n",
+      "M True\n",
+      "A True\n",
+      "K True\n",
+      "S True\n",
+      "N True\n",
+      "M True\n",
+      "K True\n",
+      "a False\n",
+      "a False\n",
+      "s False\n",
+      "a False\n",
+      "s False\n",
+      "d False\n",
+      "A True\n",
+      "S True\n",
+      "M True\n",
+      "J True\n",
+      "d False\n",
+      "a False\n",
+      "k False\n",
+      "; False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "k = 0 \n",
+    "for i in range(len(a)):\n",
+    "    print(a[k], a[k].isupper())\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "45f59f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào một chuỗi: DASDASDAasdas\n",
+      "D True\n",
+      "A True\n",
+      "S True\n",
+      "D True\n",
+      "A True\n",
+      "S True\n",
+      "D True\n",
+      "A True\n",
+      "a False\n",
+      "s False\n",
+      "d False\n",
+      "a False\n",
+      "s False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Nhập vào một chuỗi: \")\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    print(a[i],a[i].isupper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,11 +449,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a93bc53d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "H: True\n",
+      "e: True\n",
+      "l: False\n",
+      "l: False\n",
+      "o: False\n",
+      ",: True\n",
+      " : True\n",
+      "W: True\n",
+      "o: False\n",
+      "r: True\n",
+      "l: False\n",
+      "d: True\n",
+      "!: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "k = 0\n",
+    "for i in range(len(a)):\n",
+    "    print(a[k], a.count(a[k]) == 1, sep = \": \")\n",
+    "    k += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,11 +494,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1b4eab4f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: 1asdas2v\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "k = 0\n",
+    "\n",
+    "co = False\n",
+    "\n",
+    "## Kiểm tra từng thằng kí tự bên trong a, nếu mình phát hiện ký tự đó là số thì mình cho một biến cờ thành True\n",
+    "## Trong trường hợp mình không tìm thấy được bất kỳ số nào thì cờ vẫn còn là False\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    co = co or a[k].isnumeric() ## isnumeric() sẽ trả về True nếu a[k] là số ngược lại sẽ là False\n",
+    "    k += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "623d1a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: 1sNJKLasHD3 \n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "\n",
+    "b = a.count(\"0\") + a.count(\"1\") + a.count(\"2\") + a.count(\"3\") + a.count(\"4\") + a.count(\"5\") + a.count(\"6\") + a.count(\"7\")\n",
+    "+ a.count(\"8\") + a.count(\"9\")\n",
+    "\n",
+    "print(b != 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e777c0",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "k = 0\n",
+    "b = 0\n",
+    "for i in range(10):\n",
+    "    b += a.count(str(k))\n",
+    "    k += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +577,9 @@
    "id": "a34e349d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,7 +597,9 @@
    "id": "9305f0f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +621,9 @@
    "id": "9f947c7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,11 +635,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "714f1412",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Hello, World!\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "print(a.istitle())\n"
+   ]
   }
  ],
  "metadata": {
@@ -294,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
