Update Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb

--- a/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 7 - Nhập xuất dữ liệu & chuỗi.ipynb
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "85d8a019",
    "metadata": {},
    "outputs": [
@@ -1143,18 +1143,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hãy nhập vào một địa chỉ email: phamcheetahngoc@@gmail.com\n",
-      "Địa chỉ email bạn nhập có đúng cú pháp hay không:  False\n",
-      "Địa chỉ email bạn nhập có được đăng ký từ gmail hay không:  True\n"
+      "Hãy nhập vào một địa chỉ email: phamcheetahngoc@gmail.com\n",
+      "Địa chỉ email bạn nhập có đúng cú pháp hay không:  True\n",
+      "Địa chỉ email bạn nhập có được đăng ký từ Gmail hay không:  True\n"
      ]
     }
    ],
    "source": [
     "email = input(\"Hãy nhập vào một địa chỉ email: \")\n",
+    "email += \" \"\n",
     "cu_phap = email.count(\"@\") == 1\n",
     "print(\"Địa chỉ email bạn nhập có đúng cú pháp hay không: \", cu_phap)\n",
-    "gmail = email.count(\"gmail\") == 1\n",
-    "print(\"Địa chỉ email bạn nhập có được đăng ký từ gmail hay không: \", gmail)"
+    "gmail = email.count(\"@gmail.com \") == 1\n",
+    "print(\"Địa chỉ email bạn nhập có được đăng ký từ Gmail hay không: \", gmail and cu_phap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5746f012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pham@cheetahngoc@gmail.com\n",
+      "Đúng cú pháp:  False\n",
+      "Đăng kí từ Gmail:  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "email = input()\n",
+    "cu_phap = email.count(\"@\") == 1\n",
+    "print(\"Đúng cú pháp: \", cu_phap)\n",
+    "gmail = email[-10:] == (\"@gmail.com\")\n",
+    "print(\"Đăng kí từ Gmail: \", gmail and cu_phap)"
    ]
   },
   {
