Update Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb

--- a/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
+++ b/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi.ipynb
@@ -573,12 +573,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a34e349d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123abc456xyz321\n",
+      "27\n"
+     ]
+    }
+   ],
    "source": [
-    "a = input(\"Hãy nhập vào một chuỗi: \")"
+    "a =input()\n",
+    "b = 0\n",
+    "k = 0\n",
+    "for i in range(10):\n",
+    "\tb += k * a.count(str(k))\n",
+    "\tk += 1\n",
+    "print(b)\n",
+    "\t"
    ]
   },
   {
@@ -593,12 +609,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9305f0f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcxyz\n",
+      "zyxcba\n"
+     ]
+    }
+   ],
    "source": [
-    "a = input(\"Hãy nhập vào một chuỗi: \")"
+    "a = input()\n",
+    "b = a[::-1]\n",
+    "print(b)"
    ]
   },
   {
@@ -617,13 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9f947c7d",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = input(\"Hãy nhập vào một chuỗi: \")\n"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cách Làm Thông Thường:\n",
+      "True\n",
+      "Cách Làm Thông Thường:\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -635,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "714f1412",
    "metadata": {},
    "outputs": [
@@ -643,14 +679,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hãy nhập vào một chuỗi: Hello, World!\n",
-      "True\n"
+      "Cách sử dụng lệnh có sẵn:\n",
+      "False\n",
+      "Cách Sử Dụng Lệnh Có Sẵn:\n"
      ]
     }
    ],
    "source": [
-    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
-    "print(a.istitle())\n"
+    "a = input()\n",
+    "print(a.istitle())\n",
+    "print(a.title())"
    ]
   }
  ],
