Update Buổi 9 - Cấu trúc điều kiện.ipynb

--- a/Buổi 9 - Cấu trúc điều kiện.ipynb
+++ b/Buổi 9 - Cấu trúc điều kiện.ipynb
@@ -44,11 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f15fb913",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input())\n",
+    "if (a > 10):\n",
+    "    a = 10\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,11 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1a792734",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2100000\n",
+      "1890000\n"
+     ]
+    }
+   ],
+   "source": [
+    "luong = int(input())\n",
+    "if luong > 2*10^6:\n",
+    "    luong *= 0.9\n",
+    "print(int(luong))"
+   ]
   },
   {
    "attachments": {
@@ -98,11 +126,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9b5f8b09",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số: 9.3\n",
+      "Đây không phải là số chia hết cho 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input(\"Nhập số: \"))\n",
+    "if a % 3 == 0:\n",
+    "    print(\"Đây là số chia hết cho 3\")\n",
+    "else:\n",
+    "    print(\"Đây không phải là số chia hết cho 3\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,11 +157,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "104d5608",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập điểm đê: -6.9\n",
+      "Sai quy định dòi kìa sửa lại đi!\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = float(input(\"Nhập điểm đê: \"))\n",
+    "if 0 <= score <= 10:\n",
+    "    print(\"Đúng quy đình dòi đó!\")\n",
+    "else:\n",
+    "    print(\"Sai quy định dòi kìa sửa lại đi!\")"
+   ]
   },
   {
    "attachments": {
@@ -156,11 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "895cabd5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập điểm toán đê: -9.6\n",
+      "Nhập điểm văn nè: 3.6\n",
+      "Hey nhập sai quy định dồi kìa bạn ei nhập lại đê!\n"
+     ]
+    }
+   ],
+   "source": [
+    "toan = float(input(\"Nhập điểm toán đê: \"))\n",
+    "van = float(input(\"Nhập điểm văn nè: \"))\n",
+    "if (0 <= toan <= 10) and (0 <= van <= 10):\n",
+    "    tb = (toan + van) / 2\n",
+    "    print(tb)\n",
+    "    if tb >= 8:\n",
+    "        print(\"Chúc mừng nha đậu HSG rồi kìa!\")\n",
+    "    else:\n",
+    "        print(\"Oopss xin chia buồn nghen rớt HSG dòi! :<\")\n",
+    "else:\n",
+    "    print(\"Hey nhập sai quy định dồi kìa bạn ei nhập lại đê!\")"
+   ]
   },
   {
    "attachments": {
@@ -218,11 +298,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "eb013df7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào điểm số: 2.2\n",
+      "Học sinh yếu rồi kìa! Chấn chỉnh lại học tập đi nha!\n"
+     ]
+    }
+   ],
+   "source": [
+    "diem_so = float(input(\"Nhập vào điểm số: \"))\n",
+    "if (0 <= diem_so <= 10):\n",
+    "    if diem_so >= 8:\n",
+    "        print(\"Học sinh giỏi nha!\")\n",
+    "    elif  diem_so >= 6:\n",
+    "       print(\"Học sinh khá nha!\")\n",
+    "    elif diem_so >= 4:\n",
+    "       print(\"Học sinh trung bình nha!\")\n",
+    "    elif diem_so >= 2:\n",
+    "       print(\"Học sinh yếu rồi kìa! Chấn chỉnh lại học tập đi nha!\")\n",
+    "    else:\n",
+    "       print(\"Học sinh kém nha! Xin chia buồn hic :<\")\n",
+    "else:\n",
+    "    print(\"Nhập điểm sai quy định rồi kìa bạn ơi!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -236,11 +340,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "be6b18e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a vào đi nè: 1\n",
+      "Nhập số tiếp số b vào đi nè: 1\n",
+      "Nhập số c còn lại nè: 1\n",
+      "c là số lớn nhất\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### Cách làm thứ nhất ~~~> SAI\n",
+    "\n",
+    "a = float(input(\"Nhập số a vào đi nè: \"))\n",
+    "b = float(input(\"Nhập số tiếp số b vào đi nè: \"))\n",
+    "c = float(input(\"Nhập số c còn lại nè: \"))\n",
+    "\n",
+    "if a > b and a > c:\n",
+    "    print(\"a là số lớn nhất\")\n",
+    "elif b > a and b > c:\n",
+    "    print(\"b là số lớn nhất\")\n",
+    "elif c > a and c > b:\n",
+    "     print(\"c là số lớn nhất\")   \n",
+    "else:\n",
+    "    print(\"3 số bằng nhau\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "8e3943f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a vào đi nè: 2.3\n",
+      "Nhập số tiếp số b vào đi nè: 3.2\n",
+      "Nhập số c còn lại nè: 1.6\n",
+      "Số lớn nhất là 3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### Cách làm thứ 2 ~~~> ĐÚNG (From Thầy)\n",
+    "\n",
+    "a = float(input(\"Nhập số a vào đi nè: \"))\n",
+    "b = float(input(\"Nhập số tiếp số b vào đi nè: \"))\n",
+    "c = float(input(\"Nhập số c còn lại nè: \"))\n",
+    "m = a ## Biến này sẽ lưu trữ giá trị lớn nhất của 3 số\n",
+    "if m < b:\n",
+    "    m = b\n",
+    "if m < c:\n",
+    "    m = c\n",
+    "print(\"Số lớn nhất là\", m)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,11 +413,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "e35bc239",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "1 trong 2 số là số 0 nên không xét dấu được!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input())\n",
+    "b = float(input())\n",
+    "if a * b > 0:\n",
+    "    print(\"2 số cùng dấu\")\n",
+    "elif a * b < 0:\n",
+    "    print(\"2 số trái dấu\")\n",
+    "else:\n",
+    "    print(\"1 trong 2 số là số 0 nên không xét dấu được!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,11 +448,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "b51d04f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a vào đi nè: 3\n",
+      "Nhập số tiếp số b vào đi nè: 1\n",
+      "Nhập số c còn lại nè: 2\n",
+      "1.0 2.0 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### Cách thứ nhất\n",
+    "a = float(input(\"Nhập số a vào đi nè: \"))\n",
+    "b = float(input(\"Nhập số tiếp số b vào đi nè: \"))\n",
+    "c = float(input(\"Nhập số c còn lại nè: \"))\n",
+    "if a > b:\n",
+    "    a, b = b, a ## Hoán đổi giá trị của a và b\n",
+    "if b > c:\n",
+    "    b, c = c, b ## Hoán đổi giá trị của b và c ## Lúc này c sẽ là số lớn nhất\n",
+    "if a > b:\n",
+    "    a, b = b, a\n",
+    "print(a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c4a34f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số a vào đi nè: 9\n",
+      "Nhập số tiếp số b vào đi nè: 5\n",
+      "Nhập số c còn lại nè: 4\n",
+      "4 5 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### Cách thứ 2\n",
+    "a = int(input(\"Nhập số a vào đi nè: \"))\n",
+    "b = int(input(\"Nhập số tiếp số b vào đi nè: \"))\n",
+    "c = int(input(\"Nhập số c còn lại nè: \"))\n",
+    "\n",
+    "## Đưa số nhỏ nhất vào a\n",
+    "if a > b:\n",
+    "    a, b = b, a\n",
+    "if a > c:\n",
+    "    a, c = c, a\n",
+    "    \n",
+    "## Sắp xếp lại b và c\n",
+    "if b > c:\n",
+    "    b, c = c, b\n",
+    "    \n",
+    "print(a,b,c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,7 +543,11 @@
    "id": "056920c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Số chính phương bằng bình phương của một số tự nhiên\n",
+    "a = input()\n",
+    "if a**0.5 = "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
