--- a/Buổi 10 - Thực hành cấu trúc điều kiện-checkpoint.ipynb
+++ b/Buổi 10 - Thực hành cấu trúc điều kiện-checkpoint.ipynb
@@ -70,11 +70,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "049c85f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhap vao mot so: 8\n",
+      "8 khong phai la so nguyen to!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhap vao mot so: \"))\n",
+    "\n",
+    "k = 2\n",
+    "\n",
+    "co = True\n",
+    "\n",
+    "if a > 1:\n",
+    "\tfor i in range(2, a):\n",
+    "\t\tco = a % k != 0\n",
+    "\tk += 1\n",
+    "\tif co == True:\n",
+    "\t\tprint(a,  \"la so nguyen to!\")\n",
+    "\telse:\n",
+    "\t\tprint(a, \"khong phai la so nguyen to!\")\n",
+    "else:\n",
+    "\tprint(a, \"khong phai la so nguyen to!\")\n",
+    "    \n",
+    "~~~> SAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7c6092d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhap vao mot so: 2\n",
+      "2 la so nguyen to!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Nhap vao mot so: \"))\n",
+    "\n",
+    "k = 2\n",
+    "## Nhập a = 8\n",
+    "co = True\n",
+    "\n",
+    "if a > 1:\n",
+    "    for i in range(2, a): ## nếu như nhập a = 8 thì i sẽ chạy từ 2 đến 7\n",
+    "        co = a % i != 0 ## biến cờ luôn bị ghi đè ~~> giá trị biến co = 8 % 7 != 0 ~~> là true\n",
+    "    if co == True:\n",
+    "        print(a,  \"la so nguyen to!\")\n",
+    "    else:\n",
+    "        print(a, \"khong phai la so nguyen to!\")\n",
+    "else:\n",
+    "    print(a, \"khong phai la so nguyen to!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,20 +316,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8509df1e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mời quý khách nhập số lượng gà rán cần mua: 2\n",
-      "Mời quý khách nhập số lượng hamburger cần mua: 3\n",
-      "Mời quý khách nhập số lượng pepsi cần mua: 5\n",
-      "Tổng số tiền trước khi giảm giá của quý khách là: 270k\n",
-      "Tổng số tiền quý khách được giảm là: 0k\n",
-      "Tổng số tiền quý khách cần phải trả là: 270k\n",
+      "Gà rán giá 35k\n",
+      "Hamburger giá 50k\n",
+      "Gà rán giá 35k\n",
+      "Mời quý khách nhập số lượng gà rán cần mua: 90\n",
+      "Mời quý khách nhập số lượng hamburger cần mua: 99\n",
+      "Mời quý khách nhập số lượng pepsi cần mua: 100\n",
+      "1,234,567\n",
+      "Tổng số tiền trước khuyen mai của quý khách là: 9,100,000 VND\n",
+      "Quy khach duoc giam 10%: 910,000 VND\n",
+      "Tổng số tiền quy khach can phai thanh toan là: 8,190,000 VND\n",
       "Cảm ơn quý khách đã mua hàng và sử dụng dịch vụ của chúng tôi! Hẹn gặp lại quý khách.\n"
      ]
     }
@@ -282,31 +349,71 @@
     "b = int(input(\"Mời quý khách nhập số lượng hamburger cần mua: \"))\n",
     "c = int(input(\"Mời quý khách nhập số lượng pepsi cần mua: \"))\n",
     "\n",
-    "ga_ran = 35 * a\n",
-    "hamburger = 50 * b\n",
-    "pepsi = 10 * c\n",
+    "ga_ran = 35000 * a\n",
+    "hamburger = 50000 * b\n",
+    "pepsi = 10000 * c\n",
     "\n",
     "tong_tien = ga_ran + hamburger + pepsi\n",
     "\n",
-    "print(\"Tổng số tiền trước khi giảm giá của quý khách là:\", str(tong_tien) + \"k\")\n",
+    "sau_giam = 0\n",
     "\n",
-    "if tong_tien > 2000:\n",
-    "    sau_giam *= 0.9\n",
-    "elif tong_tien > 4000:\n",
-    "    sau_giam *= 0.85\n",
+    "print(format(1234567, ',d'))\n",
+    "\n",
+    "off = \"0%\"\n",
+    "print(\"Tổng số tiền trước khuyen mai của quý khách là:\", str(format(tong_tien, ',d')), \"VND\")\n",
+    "\n",
+    "if tong_tien > 2000000:\n",
+    "    sau_giam = tong_tien * 0.9\n",
+    "    off = \"10%\"\n",
+    "elif tong_tien > 4000000:\n",
+    "    sau_giam = tong_tien * 0.85\n",
+    "    off = \"15%\"\n",
     "else:\n",
     "    sau_giam = tong_tien\n",
     "    \n",
-    "giam = tong_tien - sau_giam\n",
+    "giam = int(tong_tien - sau_giam)\n",
     "\n",
-    "print(\"Tổng số tiền quý khách được giảm là:\", str(giam) + \"k\")\n",
+    "print(\"Quy khach duoc giam\", off + \":\", format(giam, ',d'), \"VND\")\n",
     "\n",
-    "print(\"Tổng số tiền quý khách cần phải trả là:\", str(tong_tien) + \"k\")\n",
+    "print(\"Tổng số tiền quy khach can phai thanh toan là:\", str(format(int(sau_giam), ',d')), \"VND\")\n",
     "\n",
-    "print(\"Cảm ơn quý khách đã mua hàng và sử dụng dịch vụ của chúng tôi! Hẹn gặp lại quý khách.\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"Cảm ơn quý khách đã mua hàng và sử dụng dịch vụ của chúng tôi! Hẹn gặp lại quý khách.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d932dc81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "700.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "tong = 700000\n",
+    "tong_tam = \"\"\n",
+    "tong = str(tong)\n",
+    "k = -1\n",
+    "dem = 0\n",
+    "## TẠI SAO LẠI KHÔNG CỘNG TỪ TRÁI SANG PHẢI MÀ LẠI CỘNG TỪ PHẢI SANG\n",
+    "## NẾU CỘNG TỪ PHẢI SANG THÌ RA CHUỖI NGƯỢC RỒI\n",
+    "for i in range(len(tong)): ## chạy từng ký tự trong chuỗi tong (chạy ngược từ dưới lên)\n",
+    "    tong_tam += tong[k]\n",
+    "    dem += 1\n",
+    "    if dem == 3: ## đếm được 3 ký tự thì đưa thêm dấu chấm vào\n",
+    "        tong_tam += \".\"\n",
+    "        dem = 0\n",
+    "    k -= 1\n",
+    "    \n",
+    "tong = tong_tam[::-1]\n",
+    "if tong[0] == \".\":\n",
+    "    tong = tong[1:]\n",
+    "print(tong)"
    ]
   },
   {
@@ -330,11 +437,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1058f441",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào chiều cao của bạn: 1.65\n",
+      "Hãy nhập vào cân nặng của bạn: 60\n",
+      "Chỉ số BMI của bạn là: 22.03856749311295\n",
+      "Bình thường\n"
+     ]
+    }
+   ],
+   "source": [
+    "height = float(input(\"Hãy nhập vào chiều cao của bạn: \")) # Đơn vị m\n",
+    "weight = int(input(\"Hãy nhập vào cân nặng của bạn: \")) # Đơn vị kg\n",
+    "\n",
+    "BMI = weight / (height ** 2) \n",
+    "\n",
+    "print(\"Chỉ số BMI của bạn là:\", BMI)\n",
+    "\n",
+    "if BMI < 16:\n",
+    "    print(\"Gầy cấp độ III\")\n",
+    "elif BMI < 17:\n",
+    "    print(\"Gầy cấp độ II\")\n",
+    "elif BMI < 18.5:\n",
+    "    print(\"Gầy cấp độ I\")\n",
+    "elif BMI < 25:\n",
+    "    print(\"Bình thường\")\n",
+    "elif BMI < 30:\n",
+    "    print(\"Thừa cân\")\n",
+    "elif BMI < 35:\n",
+    "    print(\"Béo phì cấp độ I\")\n",
+    "elif BMI < 40:\n",
+    "    print(\"Béo phì cấp độ II\")\n",
+    "else:\n",
+    "    print(\"Béo phì cấp độ III\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -352,7 +494,75 @@
    "id": "4c57f0a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "date = int(input(\"Nhập ngày: \"))\n",
+    "month = int(input(\"Nhập tháng: \"))\n",
+    "year = int(input(\"Nhập năm: \"))\n",
+    "\n",
+    "x = 3\n",
+    "\n",
+    "if year // 400 == 0 or (year // 4 == 0 and year // 100 != 0):\n",
+    "    m2 = 29    \n",
+    "else:\n",
+    "    m2 = 28\n",
+    "\n",
+    "for i in range 7:\n",
+    "    if x % 2 == 0:\n",
+    "        month = 30\n",
+    "    else: \n",
+    "        month = 31\n",
+    "    x += 1\n",
+    "    \n",
+    "for i in range (8, 12):\n",
+    "    if x % 2 == 0:\n",
+    "        month = 31\n",
+    "    else:\n",
+    "        month = 30\n",
+    "\n",
+    "if year // 400 == 0 or (year // 4 == 0 and year // 100 != 0):\n",
+    "    m2 = 29    \n",
+    "else:\n",
+    "    m2 = 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9bd43ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập ngày: 6\n",
+      "Nhập tháng: 1\n",
+      "Nhập năm: 2002\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = int(input(\"Nhập ngày: \"))\n",
+    "m = int(input(\"Nhập tháng: \"))\n",
+    "y = int(input(\"Nhập năm: \"))\n",
+    "\n",
+    "day = d\n",
+    "k = 1\n",
+    "\n",
+    "for i in range(m - 1):\n",
+    "    if k == 4 or k == 6 or k == 9 or k == 11:\n",
+    "        day += 30\n",
+    "    elif k == 2:\n",
+    "        if (y % 4 == 0 and y % 100 != 0) or y % 400 == 0:\n",
+    "            day += 29\n",
+    "        else:\n",
+    "            day += 28\n",
+    "    else:\n",
+    "        day += 31\n",
+    "    k += 1\n",
+    "print(day)"
+   ]
   }
  ],
  "metadata": {
