Update Buổi 11 - Vòng lặp while.ipynb

--- a/Buổi 11 - Vòng lặp while.ipynb
+++ b/Buổi 11 - Vòng lặp while.ipynb
@@ -41,12 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b4496cb",
+   "execution_count": 7,
+   "id": "9d82d0d1",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n",
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i <= 10: # Lệnh này sẽ ngưng khi điều kiện bị sai tức i > 10\n",
@@ -57,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2325e0e7",
+   "id": "d029a04e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2a440b57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào số nguyên a: 100\n",
+      "105 15\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input(\"Nhập vào số nguyên a: \"))\n",
     "k = 1\n",
@@ -122,10 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "11c8a215",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n",
+      "Hello everyone!\n"
+     ]
+    }
+   ],
    "source": [
     "k = 0\n",
     "while True:\n",
@@ -138,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57f87fc3",
+   "id": "dbec232e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65adf6de",
+   "id": "1072ea67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dc52c632",
+   "id": "a0dc24ad",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c186ce01",
+   "id": "32a4499e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d473ed9f",
+   "id": "d83e71a5",
    "metadata": {},
    "outputs": [],
    "source": [
